<resources>

    <string name="app_name">CRUD</string>
    <string name="configuracao">Configurações</string>
    <!---Cadastro-->
    <string name="textNome">Nome</string>
    <string name="textTelefone">Telefone</string>
    <string name="textEndereco">Endereço</string>
    <string name="textEmail">E-mail</string>
    <!---botoes-->
    <string name="btSalvar">SALVAR</string>
    <string name="btExcluir">EXCLUIR</string>
    <string name="btEditar">EDITAR</string>
    <string name="btConsulta">Consultar</string>
    <string name="title_activity_consulta">Consulta</string>
    <!--lista de pessoas-->
    <string name="listaV_dados">Lista de Pessoas</string>
</resources>
